# opencv_basics

./: .gitignore  CMakeLists.txt  README.md
00_display_image/: CMakeLists.txt  display_image.cpp
01_getting_setup/: CMakeLists.txt  main.cpp
02_loading_showing_saving/: CMakeLists.txt  main.cpp
03_windows/: CMakeLists.txt  main.cpp
04_accessing_pixels/: CMakeLists.txt  main.cpp
05_split_and_merge/: CMakeLists.txt  main.cpp
50_single_object_tracking/: CMakeLists.txt  main.cpp
51_multiple_object_tracking/: CMakeLists.txt  main.cpp
52_people_detection_hog/: CMakeLists.txt  main.cpp
53_combined_people_detection_and_tracking/: CMakeLists.txt  main.cpp
