cmake_minimum_required( VERSION 2.8 FATAL_ERROR )
project( OpenCVBasics LANGUAGES C CXX )
set( CMAKE_CXX_STANDARD 11 )
find_package( OpenCV REQUIRED )
add_subdirectory( 00_display_image )
add_subdirectory( 01_getting_setup )
add_subdirectory( 02_loading_showing_saving )
add_subdirectory( 03_windows )
add_subdirectory( 04_accessing_pixels )
add_subdirectory( 05_split_and_merge )
add_subdirectory( 50_single_object_tracking )
add_subdirectory( 51_multiple_object_tracking )
